docs/v0.2.0a42/_sources/reference/_autosummary/hpcflow.sdk.app.BaseApp.rst.txt
hpcflow.sdk.app.BaseApp
=======================

.. currentmodule:: hpcflow.sdk.app

.. autoclass:: BaseApp
   :members:
   :show-inheritance:
   :undoc-members:
   :inherited-members:
   
   
   
   .. rubric:: Methods

   .. autosummary::
      :nosignatures:
   
      ~BaseApp.get_info
      ~BaseApp.load_builtin_template_component_data
      ~BaseApp.load_config
      ~BaseApp.load_template_components
      ~BaseApp.reload_config
      ~BaseApp.reload_template_components
      ~BaseApp.template_components_from_json_like
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~BaseApp.API_logger
      ~BaseApp.CLI_logger
      ~BaseApp.command_files
      ~BaseApp.config
      ~BaseApp.config_logger
      ~BaseApp.envs
      ~BaseApp.is_config_loaded
      ~BaseApp.is_template_components_loaded
      ~BaseApp.log
      ~BaseApp.logger
      ~BaseApp.parameters
      ~BaseApp.run_time_info
      ~BaseApp.runtime_info_logger
      ~BaseApp.scripts
      ~BaseApp.task_schemas
      ~BaseApp.template_components
   
   